--- a/Face/index2.html
+++ b/Face/index2.html
@@ -207,7 +207,7 @@
                   console.log("WE ARE DONE!");
                   console.log(FACES);
 
-                  KnownPeople = 0;
+                  KnownPeople = 1
 
                   FACES.forEach(function (face) {
                       rect = face["faceRectangle"];
@@ -229,7 +229,7 @@
                             context.font = "16pt Calibri";
                             context.strokeStyle = 'white';
                             //context.fillText("" + KnownPeople + " (" + Math.floor(face["candidates"][0]["confidence"] * 100) + "%)", (rect["left"] + (rect["width"] / 2)) * ZoomFactor , (rect["top"]  - 20) * ZoomFactor);
-                            drawStroked(ctx, ("" + KnownPeople + " (" + Math.floor(face["candidates"][0]["confidence"] * 100) + "%)"), (rect["left"] - 30) * ZoomFactor , (rect["top"]  - 30) * ZoomFactor);
+                            drawStroked(ctx, ("" + KnownPeople + " (" + Math.floor(face["candidates"][0]["confidence"] * 100) + "%)"), (rect["left"] + 20) * ZoomFactor , (rect["top"]  - 30) * ZoomFactor);
 
                             document.getElementById("people").innerHTML = document.getElementById("people").innerHTML + person["OnImgIndex"] + "  -  " + person["desc"] + " - " + person["name"] + " - " + (face["candidates"][0]["confidence"] * 100) + "<br>";
 
@@ -247,7 +247,7 @@
                   console.log(PEOPLE);
                 })
                 .fail(function() {
-                    alert("error");
+                    alert("Pildil ei ole nägusid.");
                 });
               })
               .fail(function() {
