--- a/Face/index2.html
+++ b/Face/index2.html
@@ -1,12 +1,49 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>JSSample</title>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
 
+    <title>FeatureNotABug</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="starter-template.css" rel="stylesheet">
+    <script type="text/javascript" src="inimesed_enginif.json"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-</head>
-<body>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="js/vendor/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">FeatureNotABug</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Live (Veebikaamera) <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Manuaalne (Pildilt)</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+    <main role="main" class="container">
+      <div class="row" style="padding-top:5rem;">
   <canvas id="myCanvas" width="1500" height="700"></canvas>
   <p id="people"></p>
   <style>
@@ -21,31 +58,427 @@
 
   <script>
   PEOPLE = [
-		{
-			"desc":"Elab Tartus",
-			"fbid":"kjbalder",
-			"name":"Karl Johannes Balder",
-			"personId":"e9fa8adf-e3d5-4be3-9662-f3d66412676a"
-		},
-		{
-			"desc":"Nuusutab tihti lilli, mis võivad tal olla käes",
-			"fbid":"lauralenbaum",
-			"name":"Laura Lenbaum",
-			"personId":"5982fed2-d57d-43d8-8469-f6c5a194c176"
-		},
-		{
-			"desc":"Kannab kampsuneid",
-			"fbid":"radne11",
-			"name":"Radne Kaal",
-			"personId":"4237345d-71e3-4428-bdd3-fc5eb244e802"
-		},
-		{
-			"desc":"Käib gümnaasiumis",
-			"fbid":"kristjan.variksoo",
-			"name":"Kristjan Variksoo",
-			"personId":"7adb44aa-0474-4c98-b4e3-b4a69d2d65d8"
-		}
-	];
+  		{
+  			"desc":"Elab Tartus, õpib informaatikat ja armastab lugeda",
+  			"fbid":"kjbalder",
+  			"name":"Karl Johannes Balder",
+  			"personId":"9642f864-0025-4c4f-ad78-62a9571449f5"
+  		},
+  		{
+  			"desc":"Õpib TTÜs, armastab lilli",
+  			"fbid":"lauralenbaum",
+  			"name":"Laura Lenbaum",
+  			"personId":"c289f1a7-4f68-466f-844c-76bac182e48f"
+  		},
+  		{
+  			"desc":"Kannab kampsuneid, armastab külastada kohtuid",
+  			"fbid":"radne11",
+  			"name":"Radne Kaal",
+  			"personId":"b3b90493-ba53-4e57-828e-f9a4d9f7703d"
+  		},
+  		{
+  			"desc":"Jõgevamaa gümnaasiumi õpilane, love IT",
+  			"fbid":"kristjan.variksoo",
+  			"name":"Kristjan Variksoo",
+  			"personId":"9665a024-1f85-44ff-8bd8-3f81f40d30d2"
+  		},
+  		{
+  			"desc":"Töötab Helmeses, ägedaim töötaja",
+  			"fbid":"oliver.stimmer",
+  			"name":"Oliver Stimmer",
+  			"personId":"1bce5668-2eff-46ff-baba-87e987ab7655"
+  		},
+  		{
+  			"desc":"Naudib kaunist loodust ja imelisi vaateid",
+  			"fbid":"yogesh.yadav",
+  			"name":"Yogesh Yadav",
+  			"personId":"29dc6050-b3c9-455e-bce4-4858d741ed59"
+  		},
+  		{
+  			"desc":"Meeldib lugeda ja jalutamas käia",
+  			"fbid":"kauri.riivik",
+  			"name":"Kauri Riivik",
+  			"personId":"95b8020d-c3f3-4b9a-8b3d-7736d1d708a4"
+  		},
+  		{
+  			"desc":"Armastab suve ja päiekest",
+  			"fbid":"liisi.siil",
+  			"name":"Liisi Siil",
+  			"personId":"c068d449-a811-49af-a5cd-33f66dc14e40"
+  		},
+  		{
+  			"desc":"Kõige uhkema soengu omanik",
+  			"fbid":"matthiasrimm",
+  			"name":"Matthias Rimm",
+  			"personId":"a891ff6b-959d-42d8-a73d-8fe4aed9a1f5"
+  		},
+  		{
+  			"desc":"Meeldib erinevaid salle koguda",
+  			"fbid":"allarliivlaid",
+  			"name":"Allar Liivlaid",
+  			"personId":"138a2dc4-1c5e-4c63-98c4-ff81d7b32bf1"
+  		},
+  		{
+  			"desc":"Kui ei surfa meres, siis paneb roboteid kokku",
+  			"fbid":"jaanroop",
+  			"name":"Jaan Roop",
+  			"personId":"4b196eb7-d15c-418e-b966-8c11813032a4"
+  		},
+  		{
+  			"desc":"Kikilips teeb mehe šikiks",
+  			"fbid":"nikitavlassenkov",
+  			"name":"Nikita Vlassenkov",
+  			"personId":"1f76b93f-f47a-4f6c-a9d7-3c571a7f515b"
+  		},
+  		{
+  			"desc":"Mängib korvpalli, hüppab kõrgele",
+  			"fbid":"fadinfrangi",
+  			"name":"Fadi N Frangi",
+  			"personId":"766a1794-96ca-4ea8-bd65-73a6e227897f"
+  		},
+  		{
+  			"desc":"Korraldab suuri võistlusi",
+  			"fbid":"liisiraudväli",
+  			"name":"Liisi Raudväli",
+  			"personId":"c295bcc7-59ad-4778-8f47-a07b02fbf39e"
+  		},
+  		{
+  			"desc":"Juhib projekte",
+  			"fbid":"mihkelsari",
+  			"name":"Mihkel Sari",
+  			"personId":"e4855d9e-1b88-4345-a7c9-33ba84fa77cd"
+  		},
+  		{
+  			"desc":"Õpib hästi ja armastab Tartut",
+  			"fbid":"markusausmeel",
+  			"name":"Markus Ausmeel",
+  			"personId":"8a004632-f293-4ac7-af67-240503d88550"
+  		},
+  		{
+  			"desc":"On pärit Viljandist ja käib veel koolis",
+  			"fbid":"joonas.annok",
+  			"name":"Joonas Annok",
+  			"personId":"72322758-a14f-4952-b30f-5b9f9ad62eb9"
+  		},
+  		{
+  			"desc":"Õpib äriinformaatikat",
+  			"fbid":"tamorhaabmets",
+  			"name":"Tamor Haabmets",
+  			"personId":"3a1b3936-b4f3-4fe3-8919-fab872910f30"
+  		},
+  		{
+  			"desc":"Õpib TTÜs",
+  			"fbid":"silvia.veermäe",
+  			"name":"Silvia Veermäe",
+  			"personId":"3740b3e6-b155-420a-8457-7f524a7a3a3d"
+  		},
+  		{
+  			"desc":"Armastab lennata ja reisida",
+  			"fbid":"reivo.ärm",
+  			"name":"Reimo Ärm",
+  			"personId":"14b55e07-9d3e-4490-abc8-4639aa3601fd"
+  		},
+  		{
+  			"desc":"Vabatahtlik BESTis",
+  			"fbid":"liisbeth.laasik",
+  			"name":"Liisbeth Laasik",
+  			"personId":"86cdf477-69ff-49e9-919c-a860d36b3e0f"
+  		},
+  		{
+  			"desc":"Meeldivad vanad autod",
+  			"fbid":"heindrich.urmet.pärn",
+  			"name":"Heindrich Urmet Pärn",
+  			"personId":"761ba76d-10fe-4f15-a8c5-179579ee9316"
+  		},
+  		{
+  			"desc":"Meeldib käia mere ääres jalutamas",
+  			"fbid":"lotta.kaups",
+  			"name":"Lotta Kaups",
+  			"personId":"74fe4d0d-57ad-4afc-8ac7-3c0786effcbe"
+  		},
+  		{
+  			"desc":"On kõva tegelane kabes",
+  			"fbid":"nikita.bogdanov",
+  			"name":"Nikita Bogdanov",
+  			"personId":"1072e494-31c6-4bb6-9fcb-7d5e31274982"
+  		},
+  		{
+  			"desc":"On pärit Sakust ja meeldib bowlingut mängida",
+  			"fbid":"sten.ärm",
+  			"name":"Sten Ärm",
+  			"personId":"e7a7e92d-e52a-4138-a769-7d94ec3527ae"
+  		},
+  		{
+  			"desc":"Vabal ajal sõidab autoga ringi",
+  			"fbid":"hendrik.laretei",
+  			"name":"Hendrik Laretei",
+  			"personId":"1740853f-9288-446f-8857-898c9d93079b"
+  		},
+  		{
+  			"desc":"Pärit Tartust ja õppis geenitehnoloogiat",
+  			"fbid":"erki.aun",
+  			"name":"Erki Aun",
+  			"personId":"70660c79-4760-42f4-b5c8-9e15223dc604"
+  		},
+  		{
+  			"desc":"Armastab vihmast ilma",
+  			"fbid":"anna.kattel",
+  			"name":"Anna Kattel",
+  			"personId":"f9b9bdbf-2544-4b72-a47b-231c693b1e3d"
+  		},
+  		{
+  			"desc":"Käis Kuberjanovi JVP aega teenimas",
+  			"fbid":"gregor.randla",
+  			"name":"Gregor Randla",
+  			"personId":"10e086fd-3ce8-44e1-b127-472c9e99d3d1"
+  		},
+  		{
+  			"desc":"Mängib hästi võrkpalli",
+  			"fbid":"karl.stamm",
+  			"name":"Karl Stamm",
+  			"personId":"f51090b4-4786-4c47-9dea-5e30dbf744a8"
+  		},
+  		{
+  			"desc":"Särav punapea",
+  			"fbid":"annagrete.juchnewitsch",
+  			"name":"Anna-Grete Juchnewitsch",
+  			"personId":"d9090c9b-0b93-40e8-8cde-c9b8a75f9f28"
+  		},
+  		{
+  			"desc":"Müüb oma sinist bemmi",
+  			"fbid":"ian.erik.varatalu",
+  			"name":"Ian Erik Varatalu",
+  			"personId":"a6aaed8b-29ad-4964-aed1-f3329b78b673"
+  		},
+  		{
+  			"desc":"Õpib TTÜs äriinfotehnoloogiat",
+  			"fbid":"carlrobertreidolf",
+  			"name":"Carl-Robert Reidolf",
+  			"personId":"7fa0dd9f-0e6c-436a-850e-a3f03a122054"
+  		},
+  		{
+  			"desc":"Naudib päikseloojanguid",
+  			"fbid":"regina.lukk",
+  			"name":"Regina Lukk",
+  			"personId":"a9db6cf1-69b9-4970-9d5f-d646b1d5ec03"
+  		},
+  		{
+  			"desc":"Ilma päikseprillideta teda naljalt ei näe",
+  			"fbid":"mihkel.killo",
+  			"name":"Mihkel Killo",
+  			"personId":"332b715f-b941-4e57-b531-c7d4c240148e"
+  		},
+  		{
+  			"desc":"On Treasurer Best-Estonias",
+  			"fbid":"laura.melk",
+  			"name":"Laura Melk",
+  			"personId":"3f9a71f5-92ae-4501-a988-0bfc1f2c1336"
+  		},
+  		{
+  			"desc":"On Treasurer Best-Estonias",
+  			"fbid":"mari.leesmaa",
+  			"name":"Mari Leesmaa",
+  			"personId":"20a1c919-a053-443c-88d8-656fdbe542ac"
+  		},
+  		{
+  			"desc":"Õpib äriinfotehnolloogiat TTÜs",
+  			"fbid":"aliide.vainikko",
+  			"name":"Aliide Vainikko",
+  			"personId":"8e35099e-1702-466f-8537-ba475180817e"
+  		},
+  		{
+  			"desc":"Suureks kireks on suusatamine",
+  			"fbid":"karl.crado.mere",
+  			"name":"Karl-Crado Mere",
+  			"personId":"c1f5f256-efd2-4c1d-9bc4-aa4d89f313bd"
+  		},
+  		{
+  			"desc":"Elab Paides, Eestimaa südames",
+  			"fbid":"dianna.aalde",
+  			"name":"Dianna Aalde",
+  			"personId":"4abb7bca-2066-4ef2-8293-4f5ee789d6b5"
+  		},
+  		{
+  			"desc":"Õppis hea ameti Tallinna Ehituskoolis",
+  			"fbid":"georg.mihkel.kodi",
+  			"name":"Georg-Mihkel Kodi",
+  			"personId":"5c391f52-35a9-4709-80cf-fc8074150a63"
+  		},
+  		{
+  			"desc":"Meeldib reisida ja elu nautida",
+  			"fbid":"joosep.viik",
+  			"name":"Joosep Viik",
+  			"personId":"d3f59a77-6530-4015-b1c1-d75c54820b1a"
+  		},
+  		{
+  			"desc":"On poepiiga Krambudes",
+  			"fbid":"kaari.kaasik",
+  			"name":"Kaari Kaasik",
+  			"personId":"23dcb009-670b-4aab-b1d4-9013235cb53e"
+  		},
+  		{
+  			"desc":"Pilt ei sobinud andmebaasi lisamiseks",
+  			"fbid":"henrijnorden",
+  			"name":"Henri J. Norden",
+  			"personId":"f7776381-2962-4873-994a-dbc8dacd31ae"
+  		},
+  		{
+  			"desc":"Pärit Saaremaalt",
+  			"fbid":"tormi.müür",
+  			"name":"Tormi Müür",
+  			"personId":"f40fbe64-3e39-413c-9715-9cb7dbde260b"
+  		},
+  		{
+  			"desc":"Alustas õppimist koolis nimega Tallinna Tehnikaülikool 2017",
+  			"fbid":"anna.aamisepp",
+  			"name":"Anna Aamisepp",
+  			"personId":"153a3354-afd6-40d2-8447-d76b2a1536d0"
+  		},
+  		{
+  			"desc":"On Saku poiss",
+  			"fbid":"reijo.komu",
+  			"name":"Reijo Komu",
+  			"personId":"104ef2e7-0224-42ef-b77f-49f15b6ee0c4"
+  		},
+  		{
+  			"desc":"President asutuses BEST-Estonia",
+  			"fbid":"merilyn.anton",
+  			"name":"Merylin Anton",
+  			"personId":"46b7f830-3b8a-41da-a5c0-19fc3ef3759f"
+  		},
+  		{
+  			"desc":"Alustas õppimist koolis nimega Tallinna Tehnikaülikool 2017",
+  			"fbid":"kristen.rattasepp",
+  			"name":"Kristen Rattasepp",
+  			"personId":"501f5c1c-27bd-4e27-b1a4-acecc1434396"
+  		},
+  		{
+  			"desc":"Vice President for Public Relations asutuses BEST-Estonia",
+  			"fbid":"märten.mändla",
+  			"name":"Märten Mändla",
+  			"personId":"d8d5fab1-eddd-4db1-956f-49dac6ca6027"
+  		},
+  		{
+  			"desc":"Alustas õppimist koolis nimega Tallinna Tehnikaülikool 2016",
+  			"fbid":"mirjam.pajumägi",
+  			"name":"Mirjam Pajumägi",
+  			"personId":"b1c702b9-9702-4845-ade6-a786698fc796"
+  		},
+  		{
+  			"desc":"Järjekordne koosolekul kuuldud statement: oma olemuselt on ju toiteallikas lihtsalt negatiivse tarbimisega koormus.",
+  			"fbid":"heigo.mõlder",
+  			"name":"Heigo Mõlder",
+  			"personId":"65749c4a-cc4b-417d-9a16-c33ff4f5753c"
+  		},
+  		{
+  			"desc":"Success begins at the end of your comfort zone!",
+  			"fbid":"rasmus.tipp",
+  			"name":"Rasmus Tipp",
+  			"personId":"98608dd4-e517-48ac-8773-b1f6783164d8"
+  		},
+  		{
+  			"desc":"Proovis 2017 septembris võita oma seltskonnale 4 pääset Tudengkonna 97. Sünnipäevale!",
+  			"fbid":"henry.juhanson",
+  			"name":"Henry Juhanson",
+  			"personId":"3cbec8ac-81ab-4eb7-96ad-3ad4e3ccca08"
+  		},
+  		{
+  			"desc":"Armastada, elada, kasvada, aidata, uurida, olla lummatud teadmatusest. Olla õnnelik ja eluga rahul.",
+  			"fbid":"pille.riin.kuningas",
+  			"name":"Pille Riin Kuningas",
+  			"personId":"c3f52b6a-c606-4095-bed4-59ccb2a17023"
+  		},
+  		{
+  			"desc":"Is looking for 2 tickets for Lana Del Rey (Regular) on April 17, 2018.",
+  			"fbid":"kadriann.freiberg",
+  			"name":"Kadri-Ann Freiberg",
+  			"personId":"cf48c7c9-91dc-4dd4-bdcb-7e83bf129c6e"
+  		},
+  		{
+  			"desc":"Käis hiljuti Berliinis",
+  			"fbid":"jaana.lilloja",
+  			"name":"Jaana Lilloja",
+  			"personId":"c77dc64b-2254-4e73-ba63-038d33be77a7"
+  		},
+  		{
+  			"desc":"Uuendas hiljuti oma profiilipilti",
+  			"fbid":"carol.eiche",
+  			"name":"Carol Eiche",
+  			"personId":"9d1e09e8-9642-4e19-b48b-9b82584fc757"
+  		},
+  		{
+  			"desc":"BEST-Estonias aktiivselt tegev",
+  			"fbid":"maria.klimson",
+  			"name":"Maria Klimson",
+  			"personId":"f9e64949-29fb-4f2c-8cd5-777230f6ee65"
+  		},
+  		{
+  			"desc":"Projektijuht asutuses Võti Tulevikku",
+  			"fbid":"ly.tempel",
+  			"name":"Ly Tempel",
+  			"personId":"54db20d3-dac2-4ffb-b42f-04bffd31c70b"
+  		},
+  		{
+  			"desc":"Loeb Roberte Tomassone teoseid",
+  			"fbid":"elina.rätsep",
+  			"name":"Elina Rätsep",
+  			"personId":"7ba4299a-7f0f-40b7-b153-2437f2ed19d6"
+  		},
+  		{
+  			"desc":"Soovib, et iga kass leiaks kodu",
+  			"fbid":"agnes.kuus",
+  			"name":"Agnes Kuus",
+  			"personId":"bddd0297-45e4-4e4b-8dbb-6473673b242e"
+  		},
+  		{
+  			"desc":"Alustas tööd ettevõttes BEST-Estonia 2017",
+  			"fbid":"stella.leego",
+  			"name":"Stella Leego",
+  			"personId":"103248d6-b505-44c0-abdf-fb28d9f593c0"
+  		},
+  		{
+  			"desc":"Vincit qui se vincit - võidab see, kes iseennast võidab!",
+  			"fbid":"martin.grosberg",
+  			"name":"Martin Grosberg",
+  			"personId":"44237f4d-36be-47a4-b16d-0b1c3c6d90e1"
+  		},
+  		{
+  			"desc":"Thinks of London a lot",
+  			"fbid":"buddhi.weerasinghe",
+  			"name":"Buddhi Weerasinghe",
+  			"personId":"2719058d-ea16-4ae8-9043-c92c594b23ee"
+  		},
+  		{
+  			"desc":"Valis suveauto välja",
+  			"fbid":"marita.haho",
+  			"name":"Marita Haho",
+  			"personId":"934e8f1b-d2d5-4907-822c-a0387fd9a889"
+  		},
+  		{
+  			"desc":"World is an amazing place to live, just everything you imagine, becomes alive.",
+  			"fbid":"toomas.laigu",
+  			"name":"Toomas Laigu",
+  			"personId":"0bbedb92-8bd5-4111-a552-8d3a612ae5bb"
+  		},
+  		{
+  			"desc":"Alustas õppimist koolis nimega Tallinna Tehnikaülikool 2016",
+  			"fbid":"mari-liis.marge",
+  			"name":"Mari-Liis Marge",
+  			"personId":"9e453cea-2b9c-4ea5-8f7a-5e7a4353e0de"
+  		},
+  		{
+  			"desc":"Lahkus ametist asutuses BEST-Estonia",
+  			"fbid":"tarvo.erimäe",
+  			"name":"Tarvo Erimäe",
+  			"personId":"c5296b5f-dc07-4f4e-8cd4-cb68ac031539"
+  		},
+  		{
+  			"desc":"On kassi-inimene",
+  			"fbid":"marc.maidin",
+  			"name":"Marc Maidin",
+  			"personId":"048310bb-98be-48ad-8982-0567f2e1e789"
+  		}
+  	];
 
   makeblob = function (dataURL) {
       var BASE64_MARKER = ';base64,';
@@ -192,7 +625,7 @@
                     },
                     type: "POST",
                     // Request body
-                    data: '{"personGroupId": "enginaator","faceIds": ' + JSON.stringify(faceIds) + ',"maxNumOfCandidatesReturned": 1, "confidenceThreshold":0.3}'
+                    data: '{"personGroupId": "engininf","faceIds": ' + JSON.stringify(faceIds) + ',"maxNumOfCandidatesReturned": 1, "confidenceThreshold":0.3}'
 
                 })
                 .done(function(data) {
@@ -265,14 +698,6 @@
   }
 
   document.getElementById('files').addEventListener('change', handleFileSelect, false);
-</script>
-
-<script type="text/javascript">
-
-$(function() {
-
-
-});
 </script>
 </body>
 </html>
