--- a/Final/index.html
+++ b/Final/index.html
@@ -5,15 +5,86 @@
         <title>Socket.io</title>
     </head>
     <body>
-        <h1>Communication with socket.io!</h1>
+      <style>
+        html, body {
+          width: 100%;
+          height: 100%;
+        }
+
+        #RPMGauge {
+          display: block;
+          margin: 0 auto;
+        }
+      </style>
         <p id="raw"></p>
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io.connect('http://localhost:8080');
-            socket.emit('chat message', "Taitsa sonumikene!");
-            socket.on('gotline', function(msg){
-              document.getElementById("raw").innerHTML += msg + "<br>";
-            });
-        </script>
+        <script src="//cdn.rawgit.com/Mikhus/canvas-gauges/gh-pages/download/2.1.5/all/gauge.min.js"></script>
+
+        <canvas id="RPMGauge" data-type="radial-gauge"></canvas>
+
+<script>
+    var gauge = new RadialGauge({
+    renderTo: 'RPMGauge',
+    width: GaugeSize,
+    height: GaugeSize,
+    units: 'Pööret minutis',
+    title: false,
+    value: 0,
+    majorTicks: [
+        '100','200','300','400','500','600','700','800','900','1000','1100','1200'
+    ],
+    minValue: 0,
+    maxValue: 500,
+    colorPlate: '#222',
+    colorMajorTicks: '#f5f5f5',
+    colorMinorTicks: '#ddd',
+    colorTitle: '#fff',
+    colorUnits: '#ccc',
+    colorNumbers: '#eee',
+    colorNeedle: 'rgba(240, 128, 128, 1)',
+    colorNeedleEnd: 'rgba(255, 160, 122, .9)',
+    valueBox: true,
+    animationRule: 'linear',
+    animationDuration: 500
+    });
+
+    function Connect() {
+      var socket = io.connect('http://localhost:8080');
+
+      socket.on('speed', function(msg){
+        gauge.value = msg;
+        gauge.draw();
+      });
+    }
+
+    var GaugeSize = 400;
+    function SizeIt() {
+      console.log("[SizeIt] " + window.innerWidth + " " + window.innerHeight);
+
+      if (window.innerWidth > window.innerHeight) {
+        window.GaugeSize = window.innerHeight;
+      } else {
+        window.GaugeSize = window.innerWidth;
+      }
+
+      window.GaugeSize *= 0.9;
+
+      window.gauge.width = window.GaugeSize;
+      window.gauge.height = window.GaugeSize;
+
+      window.gauge.update({width:window.GaugeSize, height:window.GaugeSize});
+    }
+
+    window.onresize = function(){
+      SizeIt();
+    };
+
+    Connect();
+    SizeIt();
+
+    gauge.value = 33.2;
+    gauge.draw();
+</script>
+
     </body>
 </html>
